fix: card action text wrapping

--- a/packages/components/bolt-card-replacement/src/card-replacement-actions/_card-replacement-action.scss
+++ b/packages/components/bolt-card-replacement/src/card-replacement-actions/_card-replacement-action.scss
@@ -6,11 +6,11 @@
 @import '../card-replacement-settings-and-tools.scss';
 
 bolt-card-replacement-action {
-  flex: 1;
+  flex-basis: 100%;
 
-  // [Mai] When there are 2 actions, the text is likely to be short, that's a situation where it would benefit from text not wrapping to another line. Instead, if it runs out of room, the actions stack on top of each other.
   &:not(:only-child) {
-    white-space: nowrap;
+    flex: 1;
+    flex-basis: 180px; // Card action text can wrap freely, with a stacking point (for 2 actions) at around 19 characters.
   }
 }
 
@@ -20,6 +20,7 @@ bolt-card-replacement-action {
   display: block;
   position: relative;
   top: $bolt-card-replacement-border-width * -1;
+  height: 100%;
   border-top-width: $bolt-card-replacement-border-width;
 
   &:before {
@@ -30,9 +31,5 @@ bolt-card-replacement-action {
     width: $bolt-card-replacement-border-width;
     height: calc(100% + #{$bolt-card-replacement-border-width});
     background-color: $bolt-card-replacement-border-color;
-  }
-
-  > * {
-    height: 100%;
   }
 }
